feat: Extrai aliquota para strategies de dominio