@@ -1,25 +1,31 @@
 package br.com.itau.geradornotafiscal.service.impl;
 
+import br.com.itau.geradornotafiscal.domain.aliquota.CalculoAliquota;
 import br.com.itau.geradornotafiscal.model.*;
-import br.com.itau.geradornotafiscal.service.*;
-import org.junit.jupiter.api.BeforeEach;
+import br.com.itau.geradornotafiscal.service.EntregaService;
+import br.com.itau.geradornotafiscal.service.EstoqueService;
+import br.com.itau.geradornotafiscal.service.FinanceiroService;
+import br.com.itau.geradornotafiscal.service.RegistroService;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.List;
-import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-public class GeradorNotaFiscalServiceImplTest {
+@ExtendWith(MockitoExtension.class)
+class GeradorNotaFiscalServiceImplTest {
 
     @InjectMocks
     private GeradorNotaFiscalServiceImpl geradorNotaFiscalService;
+
+    @Mock
+    private CalculoAliquota calculoAliquota;
 
     @Mock
     private EntregaService entregaService;
@@ -33,73 +39,39 @@ public class GeradorNotaFiscalServiceImplTest {
     @Mock
     private FinanceiroService financeiroService;
 
-    @Mock
-    private CalculadoraAliquotaProduto calculadoraAliquotaProduto;
+    @Test
+    void deveMontarNotaComItensDoCalculoDeAliquotaEDispararLaterais() {
+        Pedido pedido = pedidoComFreteSudeste();
+        List<ItemNotaFiscal> itensCalculados = List.of(
+                ItemNotaFiscal.builder().valorTributoItem(12).build()
+        );
+        when(calculoAliquota.calcular(pedido)).thenReturn(itensCalculados);
 
-    @BeforeEach
-    public void setup() {
-        MockitoAnnotations.openMocks(this);
+        NotaFiscal notaFiscal = geradorNotaFiscalService.gerarNotaFiscal(pedido);
+
+        assertEquals(pedido.getValorTotalItens(), notaFiscal.getValorTotalItens());
+        assertEquals(itensCalculados, notaFiscal.getItens());
+        assertEquals(104.8, notaFiscal.getValorFrete(), 0.0001);
+        verify(estoqueService).enviarNotaFiscalParaBaixaEstoque(notaFiscal);
+        verify(registroService).registrarNotaFiscal(notaFiscal);
+        verify(entregaService).agendarEntrega(notaFiscal);
+        verify(financeiroService).enviarNotaFiscalParaContasReceber(notaFiscal);
     }
 
-
-
-    @Test
-    public void shouldGenerateNotaFiscalForTipoPessoaFisicaWithValorTotalItensLessThan500() {
+    private Pedido pedidoComFreteSudeste() {
         Pedido pedido = new Pedido();
         pedido.setValorTotalItens(400);
         pedido.setValorFrete(100);
+
         Destinatario destinatario = new Destinatario();
         destinatario.setTipoPessoa(TipoPessoa.FISICA);
 
-        // Create and add Endereco to the Destinatario
         Endereco endereco = new Endereco();
         endereco.setFinalidade(Finalidade.ENTREGA);
         endereco.setRegiao(Regiao.SUDESTE);
-        destinatario.setEnderecos(Arrays.asList(endereco));
+        destinatario.setEnderecos(List.of(endereco));
 
         pedido.setDestinatario(destinatario);
-
-        // Create and add items to the Pedido
-        Item item = new Item();
-        item.setValorUnitario(100);
-        item.setQuantidade(4);
-        pedido.setItens(Arrays.asList(item));
-
-        NotaFiscal notaFiscal = geradorNotaFiscalService.gerarNotaFiscal(pedido);
-
-        assertEquals(pedido.getValorTotalItens(), notaFiscal.getValorTotalItens());
-        assertEquals(1, notaFiscal.getItens().size());
-        assertEquals(0, notaFiscal.getItens().get(0).getValorTributoItem());
+        return pedido;
     }
-
-    @Test
-    public void shouldGenerateNotaFiscalForTipoPessoaJuridicaWithRegimeTributacaoLucroPresumidoAndValorTotalItensGreaterThan5000() {
-        Pedido pedido = new Pedido();
-        pedido.setValorTotalItens(6000);
-        pedido.setValorFrete(100);
-        Destinatario destinatario = new Destinatario();
-        destinatario.setTipoPessoa(TipoPessoa.JURIDICA);
-        destinatario.setRegimeTributacao(RegimeTributacaoPJ.LUCRO_PRESUMIDO);
-
-        // Create and add Endereco to the Destinatario
-        Endereco endereco = new Endereco();
-        endereco.setFinalidade(Finalidade.ENTREGA);
-        endereco.setRegiao(Regiao.SUDESTE);
-        destinatario.setEnderecos(Arrays.asList(endereco));
-
-        pedido.setDestinatario(destinatario);
-
-        // Create and add items to the Pedido
-        Item item = new Item();
-        item.setValorUnitario(1000);
-        item.setQuantidade(6);
-        pedido.setItens(Arrays.asList(item));
-
-        NotaFiscal notaFiscal = geradorNotaFiscalService.gerarNotaFiscal(pedido);
-
-        assertEquals(pedido.getValorTotalItens(), notaFiscal.getValorTotalItens());
-        assertEquals(1, notaFiscal.getItens().size());
-        assertEquals(0.20 * item.getValorUnitario(), notaFiscal.getItens().get(0).getValorTributoItem());
-    }
-
 }
